# events-aggregator

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml
app/: clients.py  config.py  database.py  exceptions.py  main.py  models.py  paginator.py  repositories.py  schemas.py  tasks.py  usecases.py
app/routers/: events.py  health.py  sync.py  tickets.py
tests/: conftest.py  test_clients.py  test_paginator.py  test_usecases.py
